tests/script_runtime_errors/subslice_and_idx_out_of_bounds/error.txt
Error: 
    1 | event[1:3][2]
      |            ^ Trying to access an index that is out of range 2